compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__literal_snapshots@bool_false.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: false;
---
[
    Statement {
        id: 0,
        kind: Expression(
            Expression {
                id: 5871781006564002453,
                location: <internal>:0:5,
                kind: Literal(
                    Literal {
                        id: 5871781006564002453,
                        location: <internal>:0:5,
                        kind: Boolean(
                            BooleanLiteral {
                                id: 5871781006564002453,
                                value: false,
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:5,
    },
]
