compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__literal_snapshots@int_bin_negative.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "-0b01010101;"
---
[
    Statement {
        id: 0,
        kind: Expression(
            Expression {
                id: 5871781006564002453,
                location: <internal>:1:11,
                kind: Literal(
                    Literal {
                        id: 5871781006564002453,
                        location: <internal>:1:11,
                        kind: Int(
                            IntLiteral {
                                id: 5871781006564002453,
                                value: -85,
                                kind: I32,
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:1:11,
    },
]
