compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__literal_snapshots@string_empty.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "\"\";"
---
[
    Statement {
        id: 0,
        kind: Expression(
            Expression {
                id: 5871781006564002453,
                location: <internal>:0:2,
                kind: Literal(
                    Literal {
                        id: 5871781006564002453,
                        location: <internal>:0:2,
                        kind: String(
                            StringLiteral {
                                id: 5871781006564002453,
                                value: "",
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:2,
    },
]
