compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__loop_snapshots@inf_loop_continue.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "loop { continue; }"
---
[
    Statement {
        id: 0,
        kind: InfiniteLoop(
            InfiniteLoop {
                id: 0,
                block: Block {
                    statements: [
                        Statement {
                            id: 5871781006564002453,
                            kind: Continue(
                                Continue {
                                    id: 5871781006564002453,
                                },
                            ),
                            location: <internal>:7:16,
                        },
                    ],
                    location: <internal>:5:18,
                },
                location: <internal>:0:18,
            },
        ),
        location: <internal>:0:18,
    },
]
