compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__loop_snapshots@iter_loop_break_var.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "\n        let collection = [1, 2, 3];\n        for pattern in collection { break; }"
---
[
    Statement {
        id: 0,
        kind: Variable(
            VariableDeclaration {
                id: 0,
                name: Identifier {
                    name: "collection",
                    location: <internal>:13:23,
                },
                declared_type: None,
                value: Expression {
                    id: 5871781006564002453,
                    location: <internal>:26:27,
                    kind: StaticCall(
                        StaticCall {
                            id: 5871781006564002453,
                            name: std::Array::with_capacity,
                            type_arguments: [
                                Implicit {
                                    location: <internal>:0:0,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:0:0,
                                    kind: Literal(
                                        Literal {
                                            id: 17615343019692007359,
                                            location: <internal>:0:0,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 5040379952546458196,
                                                    value: 3,
                                                    kind: U64,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
        location: <internal>:9:36,
    },
    Statement {
        id: 10912160959110460649,
        kind: IteratorLoop(
            IteratorLoop {
                id: 10912160959110460649,
                collection: Expression {
                    id: 16783941965674463102,
                    location: <internal>:60:70,
                    kind: Variable(
                        Variable {
                            id: 16783941965674463102,
                            reference: 0,
                            name: Identifier {
                                name: "collection",
                                location: <internal>:60:70,
                            },
                            location: <internal>:60:70,
                        },
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: 4208978898528913939,
                            kind: Break(
                                Break {
                                    id: 4208978898528913939,
                                },
                            ),
                            location: <internal>:73:79,
                        },
                    ],
                    location: <internal>:71:81,
                },
                location: <internal>:45:81,
            },
        ),
        location: <internal>:45:81,
    },
]
