compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__loop_snapshots@iter_loop_statement.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "for pattern in [1, 2, 3] { let a = 0; }"
---
[
    Statement {
        id: 0,
        kind: IteratorLoop(
            IteratorLoop {
                id: 0,
                collection: Expression {
                    id: 5871781006564002453,
                    location: <internal>:15:16,
                    kind: StaticCall(
                        StaticCall {
                            id: 5871781006564002453,
                            name: std::Array::with_capacity,
                            type_arguments: [
                                Implicit {
                                    location: <internal>:0:0,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:0:0,
                                    kind: Literal(
                                        Literal {
                                            id: 17615343019692007359,
                                            location: <internal>:0:0,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 5040379952546458196,
                                                    value: 3,
                                                    kind: U64,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: 10912160959110460649,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 10912160959110460649,
                                    name: Identifier {
                                        name: "a",
                                        location: <internal>:31:32,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 16783941965674463102,
                                        location: <internal>:35:36,
                                        kind: Literal(
                                            Literal {
                                                id: 16783941965674463102,
                                                location: <internal>:35:36,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 16783941965674463102,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:27:37,
                        },
                    ],
                    location: <internal>:25:39,
                },
                location: <internal>:0:39,
            },
        ),
        location: <internal>:0:39,
    },
]
